--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,10 +5,7 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
-    <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
-
-    <add key="DataBase" value="@MySql : server=127.0.0.1; user id=root; password=123; database=mytest; pooling=false" />
-    <add key="DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.1.2.2, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    <add key="DataBase" value="@Firebird : User=SYSDBA;Password=masterkey;Database=D:\test.fdb;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=true;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0" />
+    <add key="DbProviderFactory" value="@SmartDbFactory : FirebirdSql.Data.FirebirdClient, Version=2.1.0.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c" />
   </Lephone.Settings>
 </configuration>
